--- a/client/components/lists/listHeader.jade
+++ b/client/components/lists/listHeader.jade
@@ -24,6 +24,7 @@ template(name="listActionPopup")
     li: a.js-add-card {{_ 'add-card'}}
     li: a.js-import-card-other-board {{_ 'import-card-other-board'}}
     li: a.js-import-card {{_ 'import-card'}}
+    li: a.js-import-cards-tsv {{_ 'listImportCardsTsvPopup-title'}}
     li: a.js-import-redminecsv {{_ 'listImportRedminePopup-title'}}
   hr
   if cards.count
@@ -42,10 +43,6 @@ template(name="listActionPopup")
 
 template(name="listMoveCardsPopup")
   +boardLists
-
-template(name="listExportCardsTsvPopup")
-  span {{_ 'select-and-copy'}}
-  textarea.js-export-cards-tsv
 
 template(name="importCardFromOtherBoardPopup")
   ul.pop-over-list
@@ -71,6 +68,26 @@ template(name="boardLists")
           a.disabled {{title}} ({{_ 'current'}})
         else
           a.js-select-list= title
+
+template(name="listImportRedminePopup")
+  if error.get
+    .warning {{_ error.get}}
+  form
+    label(for='file-redminecsv') {{_ "select-redminecsv"}}
+      input#file-redminecsv.js-select-redminecsv(type="file")
+    label(for='encoding-csv') {{_ "charset-encoding"}}
+      select#encoding-csv.js-encodingcsv
+        each csvEncodings
+          option(value="{{this}}") {{this.toUpperCase}}
+    label(for='file-mappingcsv') {{_ "select-mappingcsv"}}
+      textarea#file-mappingcsv.js-select-mappingcsv
+        = board.dataMapping
+    hr
+    input.primary.wide.js-import-now(type="submit" value="{{_ 'import'}}")
+
+template(name="listExportCardsTsvPopup")
+  span {{_ 'select-and-copy'}}
+  textarea.js-export-cards-tsv
 
 template(name="listArchiveCardsPopup")
   p {{_ 'list-archive-cards-pop'}}
@@ -148,19 +165,3 @@ template(name="listMembersPopup")
             | (<span class="username">{{ user.username }}</span>)
           if isListMember
             i.fa.fa-check
-
-template(name="listImportRedminePopup")
-  if error.get
-    .warning {{_ error.get}}
-  form
-    label(for='file-redminecsv') {{_ "select-redminecsv"}}
-      input#file-redminecsv.js-select-redminecsv(type="file")
-    label(for='encoding-csv') {{_ "charset-encoding"}}
-      select#encoding-csv.js-encodingcsv
-        each csvEncodings
-          option(value="{{this}}") {{this.toUpperCase}}
-    label(for='file-mappingcsv') {{_ "select-mappingcsv"}}
-      textarea#file-mappingcsv.js-select-mappingcsv
-        = board.dataMapping
-    hr
-    input.primary.wide.js-import-now(type="submit" value="{{_ 'import'}}")
