--- a/client/components/sidebar/sidebar.jade
+++ b/client/components/sidebar/sidebar.jade
@@ -83,23 +83,29 @@ template(name="addMemberPopup")
   .js-search-member
     +esInput(index="users")
 
-  ul.pop-over-list
-    +esEach(index="users")
-      li.item.js-member-item(class="{{#if isBoardMember}}disabled{{/if}}")
-        a.name.js-select-member(title="{{profile.name}} ({{username}})")
-          +userAvatar(userId=_id esSearch=true)
-          span.full-name
-            = profile.fullname
-            | (<span class="username">{{username}}</span>)
-          if isBoardMember
-            .quiet ({{_ 'joined'}})
+  if loading.get
+    +spinner
+  else if error.get
+    .warning {{_ error.get}}
+  else
+    ul.pop-over-list
+      +esEach(index="users")
+        li.item.js-member-item(class="{{#if isBoardMember}}disabled{{/if}}")
+          a.name.js-select-member(title="{{profile.name}} ({{username}})")
+            +userAvatar(userId=_id esSearch=true)
+            span.full-name
+              = profile.fullname
+              | (<span class="username">{{username}}</span>)
+            if isBoardMember
+              .quiet ({{_ 'joined'}})
 
-    +ifEsIsSearching(index='users')
-      +spinner
+      +ifEsIsSearching(index='users')
+        +spinner
 
-    +ifEsHasNoResults(index="users")
-      .manage-member-section
-        p.quiet {{_ 'no-results'}}
+      +ifEsHasNoResults(index="users")
+        .manage-member-section
+          p.quiet {{_ 'no-results'}}
+    button.js-email-invite.primary.full {{_ 'email-invite'}}
 
 template(name="changePermissionsPopup")
   ul.pop-over-list
