add: invite user via email, invited user can accept or decline

--- a/client/components/boards/boardsList.styl
+++ b/client/components/boards/boardsList.styl
@@ -14,7 +14,7 @@ $spaceBetweenTiles = 16px
       .fa-star-o
         opacity: 1
 
-  a
+  .board-list-item
     background-color: #999
     color: #f6f6f6
     height: 90px
