--- a/client/components/sidebar/sidebar.jade
+++ b/client/components/sidebar/sidebar.jade
@@ -33,6 +33,13 @@ template(name="membersWidget")
           a.member.add-member.js-manage-board-members
             i.fa.fa-plus
       .clearfix
+  if isInvited
+    hr
+    p
+      i.fa.fa-exclamation-circle
+      | {{_ 'just-invited'}}
+    button.js-member-invite-accept.primary {{_ 'accept'}}
+    button.js-member-invite-decline {{_ 'decline'}}
 
 template(name="labelsWidget")
   .board-widget.board-widget-labels
@@ -56,6 +63,10 @@ template(name="memberPopup")
         h3
           .js-profile= user.profile.fullname
         p.quiet @#{user.username}
+        if isInvited
+          p
+            i.fa.fa-exclamation-circle
+            | {{_ 'not-accepted-yet'}}
 
     ul.pop-over-list
       li
@@ -68,9 +79,7 @@ template(name="memberPopup")
               span.quiet (#{memberType})
           li
             if $eq currentUser._id userId
-              //-
-                XXX Not implemented!
-              // a.js-leave-member {{_ 'leave-board'}}
+              a.js-leave-member {{_ 'leave-board'}}
             else
               a.js-remove-member {{_ 'remove-from-board'}}
 
