--- a/client/components/sidebar/sidebar.styl
+++ b/client/components/sidebar/sidebar.styl
@@ -69,6 +69,10 @@
       i.fa
         margin-right: 10px
 
+        &.fa-check
+          float: right
+          margin: 0px
+
 .board-sidebar
   width: 248px
   right: -@width
