optimize quick bar

--- a/client/components/main/header.styl
+++ b/client/components/main/header.styl
@@ -191,8 +191,10 @@
     bottom: 0px
 
     ul
-      width: calc(100% - 150px)
+      width: calc(100% - 60px)
       overflow: ellipsis
+      padding: 10px
+      margin: -10px
 
       li
         height: 28px
@@ -200,4 +202,13 @@
       li:first-child
         .fa-home
           font-size: 26px
-          margin-top: -5px
+          margin-top: -2px
+
+    #header-new-board-icon
+      display: none
+
+    #header-user-bar
+      position: absolute
+      right: 0px
+      padding: 10px
+      margin: -10px
