--- a/client/components/lists/list.styl
+++ b/client/components/lists/list.styl
@@ -46,7 +46,8 @@
 
 .list-header
   flex: 0 0 auto
-  margin: 20px 12px 4px
+  padding: 10px 10px
+  margin: 10px 10px 0px 10px
   position: relative
   min-height: 20px
 
@@ -87,7 +88,7 @@
     color: darken(white, 50%)
     position: absolute
     padding: 7px
-    margin-top: 1px
+    margin-top: 10px
     top: -@padding
     right: -@padding
 
@@ -158,8 +159,7 @@
     .list-header-left-icon
       display: inline
       padding: 7px
-      padding-right: 27px
-      margin-top: 1px
+      padding-right: 22px
       top: -@padding
       left: -@padding
 
