--- a/client/components/boards/boardBody.styl
+++ b/client/components/boards/boardBody.styl
@@ -53,7 +53,7 @@ position()
         align-items: flex-start
         display: flex
         flex-direction: column
-        margin: 0 5px 5px
+        margin: 0
         padding: 0 40px 0px 0
         overflow-x: hidden
         overflow-y: auto
