--- a/client/components/boards/boardColors.styl
+++ b/client/components/boards/boardColors.styl
@@ -56,6 +56,13 @@ setBoardColor(color)
       background: color
       color: white
 
+    &#header ul li.current, &#header-quick-access ul li.current
+      border-bottom: 0px
+      background: #dedede
+      color: #000
+      border-bottom-left-radius: 5px
+      border-bottom-right-radius: 5px
+
 .board-color-nephritis
   setBoardColor(#27AE60)
 
